[SKILLONOMY-179] header button mobile fixes

--- a/lms/static/sass/common/button/_button.scss
+++ b/lms/static/sass/common/button/_button.scss
@@ -22,6 +22,6 @@ body .learn-link {
 
     @media (max-width: $mobile-size) {
         font: 600 12px/24px 'Artegra Sans', sans-serif;
-        padding: 9px 11px;
+        padding: 5px 11px;
     }
 }
